# PodBoxBot

./: .....pre-commit-config.yaml  .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  TODO.md  bot.py  cli.py  cliff.toml  config.example  config.py  context.py  docker-compose.direct.yml  docker-compose.tun2socks.yml  docker-compose.yml  pyproject.toml  release-please-config.json  requirements.txt
.github/workflows/: ci.yml  release-please.yml  release.yml
app/: bot.py  cli.py  config.py  context.py
app/bot/: Dockerfile  cli.py  config.py  context.py  main.py  pyproject.toml
app/bot/filters/: dialog_filters.py  dispatcher_filters.py
app/bot/forms/: upload_file.py
app/bot/handlers/: __init__.py  admin_handler.py  audio_handler.py  boosty_handler.py  bot_handler.py  ftp_handler.py  podcast_handler.py  wordpress_handler.py
app/bot/keyboards/: __init__.py  admin.py  podcast_handler.py
app/bot/locales/: en.ftl  en.json  ru.ftl  ru.json
app/bot/middlewares/base/: chat_action_middleware.py  error_middleware.py  general_middleware.py  logging_middleware.py  metrics_middleware.py  user_context_middleware.py
app/bot/services/: __init__.py  context.py  keyboards.py  none_module.py  redis.py  scheduler.py  telegram_updater.py
app/bot/services/kafka/: router.py
app/bot/services/kafka/handlers/: upload_event.py
app/bot/services/telethon_methods/: __init__.py  html_parser.py  telethon_methods.py
app/bot/utils/: FTP_methods.py  HTTP_methods.py  MP3_methods.py  bot_methods.py  dialog.py  error_reporting.py  podcast_methods.py  progress_callbacks.py  template_store.py  validators.py  wordpress.py
app/filters/: dispatcher_filters.py  middlewares.py
app/handlers/: __init__.py  admin_handler.py  audio_handler.py  ftp_handler.py  podcast_handler.py  wordpress_handler.py
app/kafka/: Dockerfile  migrate_topics.py  pyproject.toml  topics.yaml
app/keyboards/: admin.py  podcast_handler.py
app/publishers/Boosty/: Dockerfile  boosty_client.py  content.py  main.py  pyproject.toml
app/publishers/FTP/: Dockerfile  main.py  metrics.py  model.py  pyproject.toml
app/publishers/WordPress/: Dockerfile  main.py  metrics.py  pyproject.toml  wordpress.py
app/schema-watcher/: Dockerfile  register_schemas_watcher.py
app/services/: __init__.py  context.py  none_module.py  scheduler.py
app/shared/config/: __init__.py  config.py
app/shared/kafka/: consumer.py  producer.py  wait_for_kafka.py
app/shared/kafka/models/: boosty_event.py  upload_event.py  wordpress_event.py
app/shared/kafka/schemas/: boosty_event.avsc  upload_event.avsc  wordpress_event.avsc
app/shared/publishers/: __init__.py  base.py  metrics.py
app/utils/: FTP_methods.py  HTTP_methods.py  MP3_methods.py  bot_methods.py  podcast_methods.py  validators.py  wordpress.py
configs/grafana/: dashboards.yaml  datasources.yaml
configs/grafana/dashbords/: Docker Monitoring.json  PodBoxBot Overview.json
configs/logging/: config.alloy  loki-config.yaml
configs/metrics/: prometheus.yml
deploy/: podboxbot.service
forms/: uploadFile.py
handlers/: admin_panel.py  middlewares.py  podcastHandler.py  start.py  start_handler.py
keyboards/: admin.py  podcastHandler.py  reply.py
src/: cli.py  context.py  main.py  settings.py
src/forms/: uploadFile.py
src/handlers/: middlewares.py  scheduler_example.py  start.py
src/utils/: dispatcher_filters.py  http_methods.py  mp3tagger.py  validators.py
tests/: conftest.py  test_00_config.py  test_00_validators.py  test_01_bot_run.py  test_02_bot_media.py  test_03_bot_site.py
tests/e2e/: .env.example  README.md  conftest.py  test_full_pipeline.py
tests/e2e/scenarios/: start_menu.yaml
tests/test_bot/handlers/: test_admin_panel.py  test_start.py
tests/test_utils/: test_validators.py
tests/unit/config/: test_get_env_bool.py  test_get_env_str.py  test_get_env_value.py  test_load_env.py  test_parse_bool.py  test_set_up_logger.py
tests/unit/filters/: test_dialog_filters.py
tests/unit/forms/: test_upload_file.py
tests/unit/handlers/: conftest.py
tests/unit/handlers/audio_handler/: test_forward_no.py  test_forward_verify.py  test_forward_yes.py
tests/unit/handlers/podcast_handler/: conftest.py  test_cancel.py  test_get_MP3.py  test_get_type.py  test_set_template.py  test_start.py
tests/unit/kafka/: test_event_router.py  test_models.py  test_producer.py  test_telegram_updater.py  test_wait_for_kafka.py
tests/unit/publishers/boosty/: conftest.py  test_boosty_client.py  test_boosty_handler.py  test_content.py
tests/unit/publishers/ftp/: conftest.py  test_ftp_handler.py
tests/unit/publishers/wordpress/: conftest.py  test_wordpress_client.py  test_wordpress_handler.py
tests/unit/services/context/: test_context.py
tests/unit/utils/: test_error_reporting.py
tests/unit/utils/MP3_methods/: conftest.py  test_audio_tag.py  test_set_chapters.py  test_time_to_milliseconds.py
tests/unit/utils/bot_methods/: test_get_release_note.py  test_get_zip_logs.py  test_shutdown.py
tests/unit/utils/dialog/: test_dialog.py
tests/unit/utils/podcast_methods/: test_generate_file_name.py  test_generate_podcast_text.py
tests/unit/utils/validators/: test_validate_path.py  test_validate_template.py
tests/unit/utils/wordpress/: conftest.py
tests/unit/utils/wordpress/class_methods/: test_enter.py  test_exit.py
tests/unit/utils/wordpress/cookies/: test_dump_cookies.py  test_load_cookies.py
tests/unit/utils/wordpress/methods/: test_get_last_post_id.py  test_upload_post.py
tests/unit/utils/wordpress/util/session/: test_check_session.py  test_close.py  test_login.py  test_make_session.py
utils/: FTP.py  HTTP_methods.py  bootstrap.sh  bot_methods.py  context.py  dispatcher_filters.py  keyboards.py  mp3tagger.py  setup-venvs.ps1  validators.py  wordpress.py
