[tool.poetry]
name = "podboxbot"
version = "0.2.0"
description = ""
authors = ["k0te1ch <khvostov40@gmail.com>"]
license = "LICENSE"
readme = "README.md"


[tool.poetry.dependencies]
python = "~=3.12"
aiogram = "~=3.12.0"
aiofiles = "~23.2.1"
aiohttp = "~3.10.5"
click = "^8.1.6"
alembic = "^1.11.1"
loguru = "^0.7.0"
redis = "^4.6.0"
apscheduler = "^3.10.1"
eyed3 = "^0.9.7"
python-dotenv = "^1.0.0"
lxml = "^5.1.0"
feedparser = "^6.0.11"
fake-useragent = "^1.4.0"
requests = "^2.31.0"
telethon = "^1.38.1"
toml = "^0.10.2"


[tool.poetry.group.testing.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
aiogram-tests = {git = "https://github.com/k0te1ch/aiogram_tests"}
responses = "^0.23.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.3.0"
pylint = "^3.1.0"
pre-commit = "^3.7.0"
poetry-plugin-up = "^0.7.1"
pytest-cov = "^5.0.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py312']
include = '\.pyi?$'

[tool.flake8]
ignore = ["E501", "E402", "E262", "E265", "E203", "W503"]
per-file-ignores = [
    "__init__.py:F401",
]
max-line-length = 119
count = true
exclude = [
    "venv/*",
    ".git/*",
    "__pycache__/*"
]

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
addopts = "--cov=./app/"
asyncio_default_fixture_loop_scope = "function"