[tool.poetry]
name = "podboxbot"
version = "0.5.1"  # x-release-please-version
description = ""
authors = ["k0te1ch <khvostov40@gmail.com>"]
license = "LICENSE"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.12,<3.15"
aiogram = "^3.28"
aiofiles = "~23.2.1"
aiohttp = "^3.13.3"
click = "^8.1.6"
alembic = "^1.11.1"
loguru = "^0.7.0"
redis = "^4.6.0"
apscheduler = "^3.10.1"
eyed3 = "^0.9.7"
python-dotenv = "^1.2.2"
lxml = "^6.1.0"
feedparser = "^6.0.11"
fake-useragent = "^1.4.0"
requests = "^2.32.5"
toml = "^0.10.2"
cryptg = "^0.5.0.post0"
telethon = "^1.39.0"
aiokafka = "^0.12.0"
fastavro = "^1.12.1"
confluent-kafka = {extras = ["avro"], version = "^2.12.0"}
pydantic = "^2.12.3"
pydantic-settings = "^2.9.1"
pre-commit = "^4.5.1"
pytz = "^2026.1.post1"
# Multi-step dialog engine. Pulled from GitHub until it lands on PyPI,
# then this switches to a plain version constraint.
dialog-engine = { git = "https://github.com/k0te1ch/DialogEngine.git" }


[tool.poetry.group.testing.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
aiogram-testing = "^1.1.0"
responses = "^0.23.1"


[tool.poetry.group.e2e]
optional = true

[tool.poetry.group.e2e.dependencies]
tgtest = {git = "https://github.com/k0te1ch/tgtest"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.11"
poetry-plugin-up = "^0.7.1"
pytest-cov = "^5.0.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 119

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "C4",    # flake8-comprehensions
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "N802",   # function name should be lowercase (aiogram callbacks)
    "N803",   # argument name should be lowercase
    "N806",   # variable in function should be lowercase
    "N801",   # class name should use CapWords (language classes: ru, en)
    "N815",   # mixedCase variable in class scope (aiogram state names)
    "N999",   # invalid module name (legacy file names)
    "B008",   # do not perform function calls in argument defaults (aiogram filters)
    "RUF001", # ambiguous unicode (Cyrillic in Russian-language strings)
    "RUF002", # ambiguous unicode docstring
    "RUF003", # ambiguous unicode comment
    "E402",   # module level import not at top (intentional in main.py)
    "SIM105", # contextlib.suppress suggestion (try/except/pass is clearer in context)
    "SIM108", # ternary operator suggestion (multi-line if/else is often clearer)
    "SIM115", # context manager suggestion (not always applicable with async)
    "SIM117", # nested with suggestion (nested structure is clearer for dependent contexts)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = [
    "config", "context", "handlers", "filters", "forms",
    "utils", "keyboards", "middlewares", "services", "shared",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "--cov=./app/ -m 'not e2e'"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: end-to-end tests against a live bot via tgtest (require TG_* creds, run with -m e2e)",
]
