[project]
name = "kafka"
version = "0.1.0"
description = ""
authors = [
    {name = "k0te1ch",email = "khvostov40@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kafka (>=1.3.5,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
