[tool.poetry]
name = "publisher_boosty"
version = "0.1.0"
description = "Boosty publisher microservice"
authors = ["k0te1ch <khvostov40@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.2.2"
loguru = "^0.7.3"
prometheus-client = "^0.21.1"
aioprometheus = "^23.12.0"
aiohttp = "^3.13.3"
fastavro = "^1.12.1"
confluent-kafka = {extras = ["avro"], version = "^2.12.0"}
pydantic = "^2.12.3"
pydantic-settings = "^2.9.1"
# Pin строго: internal-API Boosty нестабилен, либа hobby-grade
# (см. .planning/spikes/boosty-sponsr-feasibility.md → Stability risk).
boosty = "0.0.35"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
