[tool.poetry]
name = "publisher_ftp"
version = "0.3.0"
description = ""
authors = ["k0te1ch <khvostov40@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiokafka = "^0.12.0"
pytz = "^2025.2"
python-dotenv = "^1.1.0"
loguru = "^0.7.3"
prometheus-client = "^0.21.1"
aioprometheus = "^23.12.0"
aiohttp = "^3.11.18"
fastavro = "^1.12.1"
confluent-kafka = {extras = ["avro"], version = "^2.12.0"}
asyncssh = "^2.21.1"
aiofiles = "^25.1.0"
pydantic = "^2.12.3"
pydantic-settings = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
