[tool.poetry]
name = "publisher_wordpress"
version = "0.3.0"
description = "WordPress publisher microservice"
authors = ["k0te1ch <khvostov40@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pytz = "^2025.2"
python-dotenv = "^1.1.0"
loguru = "^0.7.3"
prometheus-client = "^0.21.1"
aioprometheus = "^23.12.0"
aiohttp = "^3.13.3"
fastavro = "^1.12.1"
confluent-kafka = {extras = ["avro"], version = "^2.12.0"}
pydantic = "^2.12.3"
pydantic-settings = "^2.9.1"
requests = "^2.32.0"
fake-useragent = "^2.1.0"
lxml = "^5.3.0"
feedparser = "^6.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
